// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the Header component renders the right nav elements for a guest 1`] = `
<header>
  <div
    className="header_layout"
  >
    <div
      className="container"
    >
      <div
        className="logo"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          to="/"
        >
          <img
            alt="VeraTech"
            height="42"
            src="test-file-stub"
            width="144"
          />
        </NavLink>
      </div>
      <div
        className="navigation"
      >
        <a
          className="nav_toggle"
          onClick={[Function]}
        >
          <span />
          <span />
          <span />
          <span />
        </a>
        <div
          className="menu-top-menu-container"
        >
          <ul
            className="menu"
            id="top-menu"
          >
            <NavItem
              closeNavbar={[Function]}
              link="/login"
            >
              Login
            </NavItem>
            <NavItem
              closeNavbar={[Function]}
              link="/signup"
            >
              Register
            </NavItem>
          </ul>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Test the Header component renders the right nav elements for a logged in user 1`] = `
<header>
  <div
    className="header_layout"
  >
    <div
      className="container"
    >
      <div
        className="logo"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          to="/"
        >
          <img
            alt="VeraTech"
            height="42"
            src="test-file-stub"
            width="144"
          />
        </NavLink>
      </div>
      <div
        className="navigation"
      >
        <a
          className="nav_toggle"
          onClick={[Function]}
        >
          <span />
          <span />
          <span />
          <span />
        </a>
        <div
          className="menu-top-menu-container"
        >
          <ul
            className="menu"
            id="top-menu"
          >
            <NavItem
              closeNavbar={[Function]}
              link="/dashboard"
            >
              Dashboard
            </NavItem>
            <li
              className="has-submenu"
            >
              <a
                id="request-menu-toggle"
                onClick={[Function]}
              >
                Requests
              </a>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
              <ul
                className="sub-menu"
              >
                <NavItem
                  closeNavbar={[Function]}
                  link="/requests/create"
                >
                  Create a Request
                </NavItem>
                <NavItem
                  closeNavbar={[Function]}
                  link="/requests"
                >
                  View Requests
                </NavItem>
              </ul>
            </li>
            <li
              className="menu-item"
            >
              <a
                className="buttons button_default"
                onClick={[Function]}
              >
                Logout
              </a>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Test the Header component renders the right nav elements for an admin 1`] = `
<header>
  <div
    className="header_layout"
  >
    <div
      className="container"
    >
      <div
        className="logo"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          to="/"
        >
          <img
            alt="VeraTech"
            height="42"
            src="test-file-stub"
            width="144"
          />
        </NavLink>
      </div>
      <div
        className="navigation"
      >
        <a
          className="nav_toggle"
          onClick={[Function]}
        >
          <span />
          <span />
          <span />
          <span />
        </a>
        <div
          className="menu-top-menu-container"
        >
          <ul
            className="menu"
            id="top-menu"
          >
            <NavItem
              closeNavbar={[Function]}
              link="/dashboard"
            >
              Dashboard
            </NavItem>
            <li
              className="has-submenu"
            >
              <a
                id="request-menu-toggle"
                onClick={[Function]}
              >
                Requests
              </a>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
              <ul
                className="sub-menu"
              >
                <NavItem
                  closeNavbar={[Function]}
                  link="/requests/create"
                >
                  Create a Request
                </NavItem>
                <NavItem
                  closeNavbar={[Function]}
                  link="/requests"
                >
                  View Requests
                </NavItem>
              </ul>
            </li>
            <NavItem
              closeNavbar={[Function]}
              link="/admin"
            >
              Admin Page
            </NavItem>
            <li
              className="menu-item"
            >
              <a
                className="buttons button_default"
                onClick={[Function]}
              >
                Logout
              </a>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Test the Header component renders without crashing 1`] = `
<header>
  <div
    className="header_layout"
  >
    <div
      className="container"
    >
      <div
        className="logo"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          to="/"
        >
          <img
            alt="VeraTech"
            height="42"
            src="test-file-stub"
            width="144"
          />
        </NavLink>
      </div>
      <div
        className="navigation"
      >
        <a
          className="nav_toggle"
          onClick={[Function]}
        >
          <span />
          <span />
          <span />
          <span />
        </a>
        <div
          className="menu-top-menu-container"
        >
          <ul
            className="menu"
            id="top-menu"
          >
            <NavItem
              closeNavbar={[Function]}
              link="/login"
            >
              Login
            </NavItem>
            <NavItem
              closeNavbar={[Function]}
              link="/signup"
            >
              Register
            </NavItem>
          </ul>
        </div>
      </div>
    </div>
  </div>
</header>
`;
